@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-25T08:14:49Z",
-  "count_outdated" : 147,
-  "uniques_outdated" : 122,
+  "timestamp" : "2023-07-26T01:04:54Z",
+  "count_outdated" : 149,
+  "uniques_outdated" : 124,
   "count" : 155,
   "uniques" : 130,
   "clones" : [
-    {
-      "timestamp": "2023-07-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2023-07-13T00:00:00Z",
       "count": 1,
